upload current changes

--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.21.2",
+    "express-handlebars": "^8.0.2",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.13.2",
     "morgan": "~1.9.1"
   }
 }
